# yuanyang25-back

./: .gitignore  Cargo.toml  README.md  build.sh  dev.sh  diesel.toml  login_test.py  preparedata.py  pyproject.toml  run.sh  test.py  token_generator.py  upload.sh
migrations/2024-10-09-123154_create_users_and_teams/: down.sql  up.sql
migrations/2024-11-14-070000_create_team_vericode/: down.sql  up.sql
migrations/2025-01-10-152447_add_unique_constraint_submission/: down.sql  up.sql
migrations/2025-01-11-023703_wa_cnt/: down.sql  up.sql
migrations/2025-01-13-211442_add_index_for_stat/: down.sql  up.sql
migrations/2025-01-14-104559_trigger_on_finish/: down.sql  up.sql
migrations/2025-01-15-154549_other_answers/: down.sql  up.sql
migrations/2025-01-19-184329_modify_oracle/: down.sql  up.sql
migrations/2025-01-27-041058_email/: down.sql  up.sql
src/: api_util.rs  cipher_util.rs  lib.rs  main.rs  models.rs  register.rs  schema.rs  vericode.rs
src/api/: email.rs  group.rs  mod.rs  monitor.rs  oracle.rs  puzzle.rs  register.rs  team.rs
src/util/: api_util.rs  auto_fetch.rs  cache.rs  cipher_util.rs  economy.rs  mod.rs  stat.rs
test/: login.py  preparedata.py  status_test.py  test.py  test_login.py  test_oracle.py  test_puzzle.py  test_util.py
test/example_data/: staff.txt
