[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dotenv = "0.15"
env_logger = "0.11.6"

uuid = { version = "1.12.0", features = ["serde", "v4"] }
sha2 = "0.10.8"
hex = "0.4"
once_cell = "1.20.2"
rand = "0.8"
actix-session = {version = "0.10.1", features = ["cookie-session"]}
log = "0.4.25"
derive_more = "1.0.0"
chrono = "0.4.39"

diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "tokio", "pool", "bb8"] }
tokio = { version = "1.43.0", features = ["full"] } 
bb8 = "0.9.0"

moka =  { version = "0.12.10", features = ["future"] }

[dependencies.actix-rt]
version = "2.6"

[build-dependencies]
diesel = { version = "2.0", features = ["postgres"] }

