[project]
name = "back2025"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ChenghaoLi", email = "lichenghaongyd@qq.com" }
]
dependencies = [
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/back2025"]

[tool.rye.scripts]
test = "python test/test_puzzle.py"
